# Diploma

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: check.yml
additional_files/: video_cut.py
source/: main.py  settings.py
source/estimation/: models.py  predictors.py
tests/: test_argparser.py
