[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["BLGALEX <lepehaleha@bk.ru>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.3.4"
pytube = "^11.0.1"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
