[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["BLGALEX <lepehaleha@bk.ru>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
opencv-python = "^4.5.4"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
